2007-02-19  Akim Demaille  <akim.demaille@free.fr>

	update UString
	* src/ustring.hh (update): New.
	Hopefully, should disapear in the future, together with UStrings.

2007-02-19  Akim Demaille  <akim.demaille@free.fr>

	Use libport::m?has
	* src/ucommand.cc, src/uvariablename.cc: Here.

2007-02-18  Akim Demaille  <akim.demaille@free.fr>

	Fix signature
	* src/uvariable.hh: Add missing inline.
	* src/uvariable.cc (UVariable::print): here.

2007-02-18  Akim Demaille  <akim.demaille@free.fr>

	UVariable::print
	* src/uvariable.hh, src/uvariable.cc (UVariable::print)
	(operator<< (ostream, UVariable): New.

2007-02-18  Akim Demaille  <akim.demaille@free.fr>

	unic("PREFIX")
	* src/userver.hh, src/userver.cc (URBI_unicID): Now a static
	variable of...
	(uniq()): this.
	(unic(const char*)): New.
	* src/ucommand.cc: Use it instead of unic().
	(copy): Get rid of the ret temp var when we can.

2007-02-18  Akim Demaille  <akim.demaille@free.fr>

	Factor loops
	* src/uexpression.cc (UExpression::eval_FUNCTION): Factor two
	while loops ending both branches of an if.

2007-02-17  Akim Demaille  <akim.demaille@free.fr>

	* src/uexpression.cc (to_string): New, for UExpression::Type.

2007-02-17  Akim Demaille  <akim.demaille@free.fr>

	Adjust to *maps becoming SingletonPtr
	* src/ucommand.cc, src/uobj.cc, src/userver.cc, src/uvar.cc,
	* src/uvariablename.cc: Catch up with changes in liburbi-cpp
	[426].

2007-02-17  Akim Demaille  <akim.demaille@free.fr>

	uobject-hub-common.cc
	* src/uobject.cc: Remove factored functions.

2007-02-17  Akim Demaille  <akim.demaille@free.fr>

	Update uobject/
	* src/uobject.cc: Remove parts now factored in uobject-common.cc.

2007-02-15  Akim Demaille  <akim@lrde.epita.fr>

	Restore missing parens
	* src/uqueue.cc: Fix a bug reported by MN, introduced by myself
	in 501: the removal of important parens.

2007-02-15  Akim Demaille  <akim.demaille@free.fr>

	UCommand_ASSIGN_VALUE::execute_function_call