@@ -1,5 +1,17 @@
 2007-02-19  Akim Demaille  <akim.demaille@free.fr>
 
+	Factor a bit UVariableName
+	This code is really hard to follow, and Aibo crashes somewhere here
+	(apparently, but it is hard to track).
+	* src/uvariablename.hh, src/uvariablename.cc (set_fullname): New.
+	(prefix, suffix): New.
+	Use it.
+	Prefer strlcpy to strncpy (I'll worry about portability later).
+	Instrument for ECHO etc. but do not activate.
+	Shorten some scopes.
+
+2007-02-19  Akim Demaille  <akim.demaille@free.fr>
+
 	update UString
 	* src/ustring.hh (update): New.
 	Hopefully, should disapear in the future, together with UStrings.
